--- a/AppStoreHomeInteractiveTransition/Base.lproj/Main.storyboard
+++ b/AppStoreHomeInteractiveTransition/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -69,33 +69,43 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DJK-SU-CQp" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1172.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1059.5"/>
                                         <subviews>
-                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-CN-Zxl" userLabel="LayoutHelperView">
-                                                <rect key="frame" x="-0.5" y="0.0" width="375" height="488"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lj8-FC-Aca" customClass="CardContentView" customModule="AppStoreHomeInteractiveTransition" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="488"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqG-dy-iUV">
+                                                <rect key="frame" x="0.0" y="375" width="375" height="684.5"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" secondItem="lj8-FC-Aca" secondAttribute="width" multiplier="1.3:1" id="SCR-ZG-4ea"/>
+                                                    <constraint firstAttribute="width" constant="375" id="RbW-ix-jkD"/>
                                                 </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="image" keyPath="backgroundImage" value="img1.png"/>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqG-dy-iUV">
-                                                <rect key="frame" x="0.0" y="488" width="375" height="684.5"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda. Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda. Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda. Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
+                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-CN-Zxl" userLabel="LayoutHelperView">
+                                                <rect key="frame" x="-0.5" y="0.0" width="375" height="375"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lj8-FC-Aca" customClass="CardContentView" customModule="AppStoreHomeInteractiveTransition" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="375" identifier="heightConstraint" id="33A-LD-sAw"/>
+                                                    <constraint firstAttribute="height" secondItem="lj8-FC-Aca" secondAttribute="width" multiplier="1:1" id="SCR-ZG-4ea"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="image" keyPath="backgroundImage" value="img1.png"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="SCR-ZG-4ea"/>
+                                                    </mask>
+                                                </variation>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="iqG-dy-iUV" firstAttribute="leading" secondItem="DJK-SU-CQp" secondAttribute="leading" id="4y3-jG-FdS"/>
+                                            <constraint firstItem="lj8-FC-Aca" firstAttribute="leading" secondItem="DJK-SU-CQp" secondAttribute="leading" id="BkZ-aZ-Cwa"/>
+                                            <constraint firstAttribute="trailing" secondItem="lj8-FC-Aca" secondAttribute="trailing" id="FpZ-fk-ufo"/>
                                             <constraint firstItem="OZ7-CN-Zxl" firstAttribute="top" secondItem="DJK-SU-CQp" secondAttribute="top" id="Gmb-QC-hiP"/>
                                             <constraint firstItem="OZ7-CN-Zxl" firstAttribute="height" secondItem="lj8-FC-Aca" secondAttribute="height" id="RP3-0f-pxz"/>
                                             <constraint firstAttribute="trailing" secondItem="lj8-FC-Aca" secondAttribute="trailing" id="S5r-E1-8dP"/>
@@ -104,8 +114,8 @@
                                             <constraint firstItem="lj8-FC-Aca" firstAttribute="top" secondItem="DJK-SU-CQp" secondAttribute="top" priority="999" id="dPl-kb-vJ4"/>
                                             <constraint firstAttribute="bottom" secondItem="iqG-dy-iUV" secondAttribute="bottom" id="gMJ-A8-rhZ"/>
                                             <constraint firstItem="iqG-dy-iUV" firstAttribute="top" secondItem="OZ7-CN-Zxl" secondAttribute="bottom" id="hOF-Di-r5g"/>
-                                            <constraint firstAttribute="trailing" secondItem="iqG-dy-iUV" secondAttribute="trailing" id="o0n-O7-ZNC"/>
                                             <constraint firstItem="OZ7-CN-Zxl" firstAttribute="centerX" secondItem="DJK-SU-CQp" secondAttribute="centerX" id="uSr-FX-VzR"/>
+                                            <constraint firstItem="iqG-dy-iUV" firstAttribute="centerX" secondItem="DJK-SU-CQp" secondAttribute="centerX" id="wBW-8L-Gbt"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -121,7 +131,7 @@
                         <constraints>
                             <constraint firstItem="lj8-FC-Aca" firstAttribute="top" relation="lessThanOrEqual" secondItem="lJD-Ya-yLk" secondAttribute="top" id="5Hi-ZL-ZU5"/>
                             <constraint firstItem="o18-1S-TpX" firstAttribute="leading" secondItem="lJD-Ya-yLk" secondAttribute="leading" id="Vlf-8U-n5k"/>
-                            <constraint firstItem="o18-1S-TpX" firstAttribute="top" secondItem="lJD-Ya-yLk" secondAttribute="top" id="a3k-0s-0zg"/>
+                            <constraint firstItem="o18-1S-TpX" firstAttribute="top" secondItem="lJD-Ya-yLk" secondAttribute="top" identifier="testConstraint" id="a3k-0s-0zg"/>
                             <constraint firstItem="lJD-Ya-yLk" firstAttribute="bottom" secondItem="o18-1S-TpX" secondAttribute="bottom" id="bx6-1B-fmy"/>
                             <constraint firstItem="lJD-Ya-yLk" firstAttribute="trailing" secondItem="o18-1S-TpX" secondAttribute="trailing" id="guK-17-60f"/>
                             <constraint firstItem="DJK-SU-CQp" firstAttribute="width" secondItem="YYE-if-Ap6" secondAttribute="width" id="pDD-hb-AjV"/>
