--- a/AppStoreHomeInteractiveTransition/Base.lproj/Main.storyboard
+++ b/AppStoreHomeInteractiveTransition/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="9gQ-6E-ajc">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="986-CV-P8A">
                                     <size key="itemSize" width="300" height="400"/>
@@ -43,7 +43,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vxz-ip-LNM" customClass="CardContentView" customModule="AppStoreHomeInteractiveTransition" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="380"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="image" keyPath="backgroundImage" value="img1.png"/>
@@ -53,7 +53,7 @@
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Vxz-ip-LNM" secondAttribute="trailing" id="MGR-jh-S86"/>
-                                            <constraint firstAttribute="bottom" secondItem="Vxz-ip-LNM" secondAttribute="bottom" constant="20" id="Unr-92-Bke"/>
+                                            <constraint firstAttribute="bottom" secondItem="Vxz-ip-LNM" secondAttribute="bottom" id="Unr-92-Bke"/>
                                             <constraint firstItem="Vxz-ip-LNM" firstAttribute="leading" secondItem="6Oq-TB-VeZ" secondAttribute="leading" id="fj6-Wo-yfI"/>
                                             <constraint firstItem="Vxz-ip-LNM" firstAttribute="top" secondItem="6Oq-TB-VeZ" secondAttribute="top" id="r57-yc-RbR"/>
                                         </constraints>
@@ -63,12 +63,22 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EfP-Jo-3Ns">
+                                <rect key="frame" x="177" y="343.5" width="20" height="20"/>
+                                <color key="backgroundColor" red="0.05853712346" green="0.97647058819999999" blue="0.083322187790000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Aff-jK-5XH"/>
+                                    <constraint firstAttribute="width" constant="20" id="tad-Q2-v60"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="EfP-Jo-3Ns" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1dr-BY-2Wx"/>
                             <constraint firstItem="9gQ-6E-ajc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YsV-dh-lpZ"/>
-                            <constraint firstItem="9gQ-6E-ajc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="aSY-qH-tl1"/>
+                            <constraint firstItem="9gQ-6E-ajc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aSY-qH-tl1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9gQ-6E-ajc" secondAttribute="trailing" id="diU-af-uBD"/>
+                            <constraint firstItem="EfP-Jo-3Ns" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="20" id="hJ5-JK-zrD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9gQ-6E-ajc" secondAttribute="bottom" id="n5n-Hh-vdl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
